# ChangeLog for mail-client/notmuch
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2010; James Rowe <jnrowe@gmail.com> notmuch-0.4.ebuild:
  Keyworded amd64.

  24 Nov 2010; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Merged 0.5 changes to live ebuild.

*notmuch-0.5 (24 Nov 2010)

  24 Nov 2010; James Rowe <jnrowe@gmail.com> +notmuch-0.5.ebuild,
  +files/notmuch-0.5-optional_emacs.patch:
  Version bump [233].

  09 Nov 2010; James Rowe <jnrowe@gmail.com> notmuch-9999.ebuild:
  Merged 0.4 changes to live ebuild.

*notmuch-0.4 (09 Nov 2010)

  09 Nov 2010; James Rowe <jnrowe@gmail.com> +notmuch-0.4.ebuild,
  +files/notmuch-0.4-optional_emacs.patch:
  Version bump [226].

  22 Sep 2010; James Rowe <jnrowe@gmail.com> -notmuch-0.1.ebuild,
  notmuch-0.3.ebuild:
  Keyworded x86.

  22 Sep 2010; James Rowe <jnrowe@gmail.com> notmuch-0.3.ebuild:
  Keyworded amd64.

  24 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.3.ebuild,
  notmuch-9999.ebuild:
  Use built library for Python bindings.

  24 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.3.ebuild,
  notmuch-9999.ebuild:
  Only install emacs files with USE=emacs.

  23 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.3.ebuild,
  notmuch-9999.ebuild:
  Merged changes from 0.3 bump [6aa] in to live ebuild.

  23 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.3.ebuild:
  Support installation of Python bindings [9af].

  23 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild:
  Keyworded amd64.

*notmuch-0.3 (23 Aug 2010)

  23 Aug 2010; James Rowe <jnrowe@gmail.com> +notmuch-0.3.ebuild:
  Version bump [6aa].

  14 Aug 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild,
  notmuch-9999.ebuild:
  Merged live and released ebuilds.

  19 Jul 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild:
  Keyworded x86.

  10 Jun 2010; James Rowe <jnrowe@gmail.com> notmuch-0.1.ebuild,
  notmuch-9999.ebuild:
  Switched to using base.eclass' src_install.
