@@ -3,19 +3,17 @@ Hash: SHA1
 
 AUX notmuch-0.4-optional_emacs.patch 8513 RMD160 641ae43bda081fcbc1d3a24f9a68b0fb718438c6 SHA1 ab7ecd473cbfa0e8baa43538b983016e18143141 SHA256 cb7590eb251afcf03e9ba4e51d641b1cff7f977fad1595540fe70799a5a36d08
 AUX notmuch-0.5-optional_emacs.patch 9406 RMD160 0d03da950c3cded8c986b287d730142506c99bc5 SHA1 b8b478365a38e4a063a7b197780ea1267a4f184e SHA256 7c979b0486e1c7982041f9c0096f0dea88725b040a888686b2a5b6bc49a705c8
-DIST notmuch-0.3.tar.gz 239155 RMD160 3a53fea3b0835d37a02b8877bdce50f1a4f8466b SHA1 d65866323cb76b99fd3004c7f9af7f0e322743b3 SHA256 ab1a129b6d7641dba56a9c4b3a8e36c790eae9437df9d51cd11a26c05af05dcb
 DIST notmuch-0.4.tar.gz 309136 RMD160 d48795388d063dc7f73c8a9d0fc0b5261f10f81d SHA1 d40cb07adab0d595c64e9b73f1fd306cc9dff106 SHA256 a8ba23ce68b42dbef22563182c5b34dfbdb46494f94e8fb5694da993cba6ceef
 DIST notmuch-0.5.tar.gz 340156 RMD160 57cd41d2c2b672dffe733fcbd171082e7be8a30e SHA1 8a02dba668abdae783b94d11de01a27f9dcd6085 SHA256 c7eeb95c89c5b9cb22cc0b90abce5f923c20c982d607bf32829c989e905ff1a9
-EBUILD notmuch-0.3.ebuild 3017 RMD160 4e08a5429eaea0bcc538d59236df8fd15ac1139e SHA1 ad0075d2eb1e68e1c71e31cfdedc9954ad5d5ada SHA256 94e24c902bbc522c37c5472121b86b439fe1792abf6cd2c244c93e1fdb251a58
-EBUILD notmuch-0.4.ebuild 3592 RMD160 7134f0d7ebaacbeea8210dd314f844f6e88b8610 SHA1 cff7139709fad59a9f77d37bac0007991e45d7b2 SHA256 7dc49e8872be1b5811b5660b5becca9915baa844f1da1745ead54baed3c651f1
+EBUILD notmuch-0.4.ebuild 3591 RMD160 b444ed463a662d2cebab83277ce967bb8d85bcc6 SHA1 ef64c017573d6c1bb4e8e59d39bc4431517d9eb2 SHA256 1a81a2e08029562a5c874c68437689bd852ba54cc28d9e7e46c65aeba42fa153
 EBUILD notmuch-0.5.ebuild 4361 RMD160 a390d825a662a163960ce2221b86690d0aa57ea5 SHA1 e7c184ab7046782e55359dcec483a0e71de138fc SHA256 791092855bba2a2d347f4be813014ad6a07e50207703af95dff4aab6cd9db22c
 EBUILD notmuch-9999.ebuild 4350 RMD160 9684d3f76b0b94cf1731128bd3511b602ae81d46 SHA1 c626be1a029cba822695935dd0f4ab50832be4c3 SHA256 aa9970035ac950e03e1c67ca5dcbe891a67a347bc44313befd188eefdf6488aa
-MISC ChangeLog 4571 RMD160 70d9204921debb0996b60d55450529e9bf84a5e2 SHA1 4c2d65d8671d7577f2939f8b1da34cc316a4ca91 SHA256 80c60f378d130c2597b1ee7f9a86c52e83c734898523d38ee3f2f0821fcc9999
+MISC ChangeLog 4677 RMD160 cc87bd1e85380f7b39cb451523cd9db4126b2536 SHA1 24584d00aeb169c56f504c821039b65d94194f3e SHA256 0e38686209cc1764108c0dc444f782d78995afbec73cb805262c2e015d95d54e
 MISC metadata.xml 897 RMD160 436f9558ab188a98a79dee2b25afba0ce4660f97 SHA1 f31467190638f4b59034c19c855c798b919143f4 SHA256 9408059d62680198c500a7e4727352f9195602f4550fbd25e1962b3b953c74d7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAk0AWA8ACgkQzJrj3cAXR0l5egCfWh6BIXjRzIuPwMlIRkzhArEe
-MlsAn1M8gKgT5pXxKZ2P52hnrDsBWn+F
-=pwmW
+iEYEARECAAYFAk0AWloACgkQzJrj3cAXR0kLbgCbBHPP2MdXSwC2+wSLxBAeDsH2
+lasAoJ+J1dpzb1xnNWXrsurLF/uhmxcb
+=C1bo
 -----END PGP SIGNATURE-----
