@@ -1,22 +1,0 @@
-dev-util/pkgconfig debug? ( dev-util/valgrind ) sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( virtual/emacs ) vim? ( || ( app-editors/vim app-editors/gvim ) ) zsh-completion? ( app-shells/zsh ) >=app-admin/eselect-python-20091230 python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) )
-sys-libs/talloc >=dev-libs/gmime-2.4 dev-libs/xapian emacs? ( virtual/emacs ) vim? ( || ( app-editors/vim app-editors/gvim ) ) zsh-completion? ( app-shells/zsh ) >=app-admin/eselect-python-20091230 python? ( || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* ) ) bash-completion? ( app-admin/eselect )
-0
-http://notmuchmail.org/releases/notmuch-0.3.tar.gz
-
-http://notmuchmail.org/
-GPL-3
-Thread-based email index, search and tagging.
-amd64 x86
-base bash-completion distutils elisp-common eutils multilib portability python toolchain-funcs
-X debug emacs python vim zsh-completion bash-completion
-
-bash-completion? ( app-shells/bash-completion )
-
-3
-
-compile configure install postinst postrm prepare unpack
-
-
-
-
-
