@@ -6,7 +6,7 @@ http://notmuchmail.org/releases/notmuch-0.4.tar.gz
 http://notmuchmail.org/
 GPL-3
 Thread-based email index, search and tagging.
-amd64 ~x86
+amd64 x86
 base bash-completion distutils elisp-common eutils multilib portability python toolchain-funcs
 X debug emacs python vim zsh-completion bash-completion
 
