@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Dec 2010; James Rowe <jnrowe@gmail.com> -notmuch-0.3.ebuild,
+  notmuch-0.4.ebuild:
+  Keyworded x86.
+
   09 Dec 2010; James Rowe <jnrowe@gmail.com> notmuch-0.4.ebuild:
   Keyworded amd64.
 
